feat(graphql-toolkit): add async-graphql parser and ast
Signed-off-by: Lorenzo Delgado <lnsdev@proton.me>

--- a/.github/release-plz.toml
+++ b/.github/release-plz.toml
@@ -4,3 +4,7 @@ pr_labels = ["release"]     # Add the `release` label to the release Pull Reques
 pr_draft = true             # Create release PR as a draft
 publish = false             # Disable `cargo publish` for the workspace
 release = false             # Disable release-plz for the workspace
+
+[[package]]
+name = "graphql-toolkit"
+release = true          # Enable release-plz for the package
