--- a/graphql-toolkit/Cargo.toml
+++ b/graphql-toolkit/Cargo.toml
@@ -9,3 +9,10 @@ license = "Apache-2.0"
 rust-version = "1.71.1"
 
 [dependencies]
+anyhow = "1.0"
+async-graphql-parser = "7.0"
+async-graphql-value = "7.0"
+
+[dev-dependencies]
+assert_matches = "1.5"
+indoc = "2.0.5"
