--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -8,7 +8,7 @@
   ],
   timezone: 'Europe/Madrid',
   schedule: [
-    'before 8am every Monday'
+    'before 8am on Monday'
   ],
   configMigration: true,
   rebaseWhen: 'behind-base-branch',
