--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,12 +25,7 @@ jobs:
       - name: Setup Rust toolchain
         uses: dtolnay/rust-toolchain@stable
         with:
-          components: clippy, llvm-tools-preview
-
-      - name: Setup Rust toolchain (nightly)
-        uses: dtolnay/rust-toolchain@nightly
-        with:
-          components: rustfmt
+          components: rustfmt, clippy, llvm-tools-preview
 
       - name: Cache rust build files
         uses: Leafwing-Studios/cargo-cache@c7e8aa40ae2c975774d3bd766beb92927cfd7771 # v1
@@ -41,20 +36,20 @@ jobs:
           crate: cargo-llvm-cov
 
       - name: Cargo check
-        run: cargo +stable check --all-targets --all-features
+        run: cargo check --all-targets --all-features
 
       - name: Cargo fmt
-        run: cargo +nightly fmt --all -- --check
+        run: cargo fmt --all -- --check
 
       - name: Cargo clippy
-        run: cargo +stable clippy --all-targets --all-features -- -D warnings --force-warn deprecated --force-warn dead-code
+        run: cargo clippy --all-targets --all-features -- -D warnings --force-warn deprecated --force-warn dead-code
 
       ## Tests
       - name: Run unit tests
-        run: cargo +stable llvm-cov test --lib --lcov --output-path unit-lcov.info
+        run: cargo llvm-cov test --lib --lcov --output-path unit-lcov.info
 
       - name: Run integration tests
-        run: cargo +stable llvm-cov test --test '*' --lcov --output-path it-lcov.info
+        run: cargo llvm-cov test --test '*' --lcov --output-path it-lcov.info
 
       - name: Upload unit tests coverage report to codecov
         uses: codecov/codecov-action@eaaf4bedf32dbdc6b720b63067d99c4d77d6047d # v3
