--- a/graphql-toolkit/Cargo.toml
+++ b/graphql-toolkit/Cargo.toml
@@ -12,7 +12,10 @@ rust-version = "1.71.1"
 anyhow = "1.0"
 async-graphql-parser = "7.0"
 async-graphql-value = "7.0"
+itoa = { version = "1.0", default-features = false }
+ryu = { version = "1.0", default-features = false }
 
 [dev-dependencies]
 assert_matches = "1.5"
 indoc = "2.0.5"
+insta = "1.38.0"
