feat(value): add graphql-toolkit-value crate
Signed-off-by: Lorenzo Delgado <lnsdev@proton.me>

--- a/.github/release-plz.toml
+++ b/.github/release-plz.toml
@@ -13,3 +13,7 @@ release = true          # Enable release-plz for the package
 [[package]]
 name = "graphql-toolkit-ast"
 release = true          # Enable release-plz for the package
+
+[[package]]
+name = "graphql-toolkit-value"
+release = true          # Enable release-plz for the package
