--- a/graphql-toolkit-value/Cargo.toml
+++ b/graphql-toolkit-value/Cargo.toml
@@ -1,8 +1,11 @@
 [package]
 name = "graphql-toolkit-value"
 description = "GraphQL Toolkit value definitions"
-version = "0.0.0"
+version = "0.1.0"
 edition = "2021"
 authors = ["Lorenzo Delgado (LNSD) <lnsdev@proton.me>"]
 license = "Apache-2.0"
 rust-version = "1.71.1"
+
+[dependencies]
+async-graphql-value = "7.0.5"
