chore(graphql-toolkit): remove dependency on async-graphql-parser
Signed-off-by: Lorenzo Delgado <lnsdev@proton.me>

--- a/graphql-toolkit/Cargo.toml
+++ b/graphql-toolkit/Cargo.toml
@@ -11,8 +11,8 @@ publish = false
 
 [dependencies]
 anyhow = "1.0"
-async-graphql-parser = "7.0"
 graphql-toolkit-ast = { version = "0.1.1", path = "../graphql-toolkit-ast" }
+graphql-toolkit-parser = { version = "0.1.1", path = "../graphql-toolkit-parser" }
 itoa = { version = "1.0", default-features = false }
 ryu = { version = "1.0", default-features = false }
 
