chore: set crates repository url
Signed-off-by: Lorenzo Delgado <lnsdev@proton.me>

--- a/graphql-toolkit-value/Cargo.toml
+++ b/graphql-toolkit-value/Cargo.toml
@@ -2,9 +2,10 @@
 name = "graphql-toolkit-value"
 description = "GraphQL Toolkit value definitions"
 version = "0.1.0"
-edition = "2021"
+repository = "https://github.com/LNSD/graphql-toolkit"
 authors = ["Lorenzo Delgado (LNSD) <lnsdev@proton.me>"]
 license = "Apache-2.0"
+edition = "2021"
 rust-version = "1.71.1"
 
 [dependencies]
