--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,6 @@ members = [
     "graphql-toolkit-ast",
     "graphql-toolkit-parser",
     "graphql-toolkit-value",
+    "graphql-toolkit-writer",
     "testlib/parser-testdata",
 ]
