chore(ci): enable release workflow for graphql-toolkit-writer crate
Signed-off-by: Lorenzo Delgado <lnsdev@proton.me>

--- a/.github/release-plz.toml
+++ b/.github/release-plz.toml
@@ -17,3 +17,7 @@ release = true          # Enable release-plz for the package
 [[package]]
 name = "graphql-toolkit-value"
 release = true          # Enable release-plz for the package
+
+[[package]]
+name = "graphql-toolkit-writer"
+release = true          # Enable release-plz for the package
