feat(composer): add graphql-toolkit-composer crate
Signed-off-by: Lorenzo Delgado <lnsdev@proton.me>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ resolver = "2"
 members = [
     "graphql-toolkit",
     "graphql-toolkit-ast",
+    "graphql-toolkit-composer",
     "graphql-toolkit-parser",
     "graphql-toolkit-value",
     "graphql-toolkit-writer",
