--- a/graphql-toolkit-value/Cargo.toml
+++ b/graphql-toolkit-value/Cargo.toml
@@ -9,4 +9,7 @@ edition = "2021"
 rust-version = "1.71.1"
 
 [dependencies]
-async-graphql-value = "7.0.5"
+bytes = { version = "1.6.0", features = ["serde"] }
+indexmap = { version = "2.2.6", features = ["serde"] }
+serde = { version = "1.0.203", features = ["derive"] }
+serde_json = "1.0.117"
