--- a/graphql-toolkit-ast/Cargo.toml
+++ b/graphql-toolkit-ast/Cargo.toml
@@ -10,4 +10,4 @@ rust-version = "1.71.1"
 
 [dependencies]
 async-graphql-parser = "7.0.5"
-graphql-toolkit-value = { version = "0.1.1", path = "../graphql-toolkit-value" }
+graphql-toolkit-value = "0.1.1"
