--- a/graphql-toolkit-parser/Cargo.toml
+++ b/graphql-toolkit-parser/Cargo.toml
@@ -10,7 +10,7 @@ rust-version = "1.71.1"
 
 [dependencies]
 async-graphql-parser = "7.0.5"
-graphql-toolkit-ast = { version = "0.1.2", path = "../graphql-toolkit-ast" }
+graphql-toolkit-ast = "0.1.2"
 
 [dev-dependencies]
 assert_matches = "1.5.0"
